Add basic HTML structure for portfolio site

--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
-<h1>hello world</h1>
+<!DOCTYPE html>
+<html lang="no">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Min Portfolio</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+    <!-- Navigasjon -->
+    <nav>
+        <h1>Mitt navn</h1>
+        <ul>
+            <li><a href="#about">Om meg</a></li>
+            <li><a href="#projects">Prosjekter</a></li>
+            <li><a href="#contact">Kontakt</a></li>
+        </ul>
+    </nav>
+
+    <!-- Om meg -->
+    <section id="about">
+        <h2>Om meg</h2>
+        <p>Hei! Jeg er en utvikler med interesse for maskinlæring og teknologi. 
+        Her kan du se prosjekter jeg har jobbet med!</p>
+    </section>
+
+    <!-- Prosjekter -->
+    <section id="projects">
+        <h2>Prosjekter</h2>
+        <div class="project-card">
+            <h3>Maskinlæringsprosjekt</h3>
+            <p>Kort beskrivelse av gruppens prosjekt — hva det gjør, teknologier brukt, 
+            og hvorfor det er spennende.</p>
+            <a href="https://github.com/brukernavn/repo-navn" target="_blank">Se på GitHub →</a>
+        </div>
+        <!-- Du kan kopiere .project-card for flere prosjekter -->
+    </section>
+
+    <!-- Kontakt -->
+    <section id="contact">
+        <h2>Kontakt</h2>
+        <p>Email: <a href="mailto:deg@email.com">deg@email.com</a></p>
+    </section>
+
+    <footer>
+        <p>© 2025 Mitt navn</p>
+    </footer>
+
+</body>
+</html>
